# app/Dtos/PageDto.php
@@ -8,26 +8,44 @@ use Heseya\Dto\Dto;
 
 class PageDto extends Dto
 {
-    private string $name;
+    /** @var array<string, PageTranslationDto> */
+    private array $translations;
+    /** @var string[] */
+    private array $published;
     private string $slug;
     private bool $public;
-    private string $content_html;
     private SeoMetadataDto $seo;
 
     public static function fromFormRequest(PageStoreRequest|PageUpdateRequest $request)
     {
+        $translations = array_map(fn ($data) => PageTranslationDto::fromParams(
+            $data['name'],
+            $data['content_html'],
+        ), $request->input('translations', []));
+
         return new self(
-            name: $request->input('name'),
+            translations: $translations,
+            published: $request->input('published', []),
             slug: $request->input('slug'),
             public: $request->input('public'),
-            content_html: $request->input('content_html'),
             seo: SeoMetadataDto::fromFormRequest($request),
         );
     }
 
-    public function getName(): string
+    /**
+     * @return PageTranslationDto[]
+     */
+    public function getTranslations(): array
     {
-        return $this->name;
+        return $this->translations;
+    }
+
+    /**
+     * @return string[]
+     */
+    public function getPublished(): array
+    {
+        return $this->published;
     }
 
     public function getSlug(): string
@@ -38,11 +56,6 @@ class PageDto extends Dto
     public function isPublic(): bool
     {
         return $this->public;
-    }
-
-    public function getContentHtml(): string
-    {
-        return $this->content_html;
     }
 
     public function getSeo(): SeoMetadataDto
