# app/Http/Controllers/StatusController.php
@@ -8,11 +8,17 @@ use App\Http\Requests\StatusReorderRequest;
 use App\Http\Requests\StatusUpdateRequest;
 use App\Http\Resources\StatusResource;
 use App\Models\Status;
+use App\Services\Contracts\TranslationServiceContract;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Resources\Json\JsonResource;
 
 class StatusController extends Controller
 {
+    public function __construct(
+        private TranslationServiceContract $translationService,
+    ) {
+    }
+
     public function index(): JsonResource
     {
         return StatusResource::collection(Status::orderBy('order')->get());
@@ -20,14 +26,30 @@ class StatusController extends Controller
 
     public function store(StatusCreateRequest $request): JsonResource
     {
-        $status = Status::create($request->validated());
+        $status = Status::make($request->validated());
+
+        foreach($request->input('translations') as $lang => $translations) {
+            $status->setLocale($lang)->fill($translations);
+        }
+
+        $this->translationService->checkPublished($status, ['name']);
+
+        $status->save();
 
         return StatusResource::make($status);
     }
 
     public function update(Status $status, StatusUpdateRequest $request): JsonResource
     {
-        $status->update($request->validated());
+        $status->fill($request->validated());
+
+        foreach($request->input('translations', []) as $lang => $translations) {
+            $status->setLocale($lang)->fill($translations);
+        }
+
+        $this->translationService->checkPublished($status, ['name']);
+
+        $status->save();
 
         return StatusResource::make($status);
     }
