# public/docs/api.yml
@@ -1501,12 +1501,18 @@ components:
       $ref: './schemas/Media.yml#Media'
     Option:
       properties:
+        translations:
+          type: object
+          properties:
+            language-uuid:
+              type: object
+              properties:
+                name:
+                  type: string
+                  example: XL
         id:
           type: string
           example: 026bc5f6-8373-4aeb-972e-e78d72a67121
-        name:
-          type: string
-          example: XL
         price:
           description: 'Additional price the customer will have to pay after selecting this option (can be negative)'
           type: float
@@ -1841,14 +1847,30 @@ components:
         application/json:
           schema:
             required:
-              - name
+              - translations
+              - published
               - slug
-              - content_html
             properties:
-              name:
-                description: 'Name displayed as a page header'
-                type: string
-                example: 'Terms & Conditions'
+              translations:
+                type: object
+                properties:
+                  language-uuid:
+                    type: object
+                    properties:
+                      name:
+                        description: 'Name displayed as a page header'
+                        type: string
+                        example: 'Terms & Conditions'
+                      content_html:
+                        description: 'HTML formated text to be displayed as a main content under the page header'
+                        type: string
+                        example: '<h1>Lorem ipsum dolor sit amet</h1>'
+              published:
+                type: array
+                description: 'Array of published language ids'
+                items:
+                  type: string
+                  example: 0006c3a0-21af-4485-b7fe-9c42233cf03a
               slug:
                 description: 'Name used in the URL path'
                 type: string
@@ -1857,10 +1879,6 @@ components:
                 description: 'Whether page is visible to unauthorized users'
                 type: boolean
                 example: true
-              content_html:
-                description: 'HTML formated text to be displayed as a main content under the page header'
-                type: string
-                example: '<h1>Lorem ipsum dolor sit amet</h1>'
               seo:
                 $ref: '#/components/schemas/SeoStore'
             type: object
@@ -1869,10 +1887,26 @@ components:
         application/json:
           schema:
             properties:
-              name:
-                description: 'Name displayed as a page header'
-                type: string
-                example: 'Terms & Conditions'
+              translations:
+                type: object
+                properties:
+                  language-uuid:
+                    type: object
+                    properties:
+                      name:
+                        description: 'Name displayed as a page header'
+                        type: string
+                        example: 'Terms & Conditions'
+                      content_html:
+                        description: 'HTML formated text to be displayed as a main content under the page header'
+                        type: string
+                        example: '<h1>Lorem ipsum dolor sit amet</h1>'
+              published:
+                type: array
+                description: 'Array of published language ids'
+                items:
+                  type: string
+                  example: 0006c3a0-21af-4485-b7fe-9c42233cf03a
               slug:
                 description: 'Name used in the URL path'
                 type: string
@@ -1881,10 +1915,6 @@ components:
                 description: 'Whether page is visible to unauthorized users'
                 type: boolean
                 example: true
-              content_html:
-                description: 'HTML formated text to be displayed as a main content under the page header'
-                type: string
-                example: '<h1>Lorem ipsum dolor sit amet</h1>'
               seo:
                 $ref: '#/components/schemas/SeoStore'
             type: object
